# src/routes/routes.ts
@@ -4,6 +4,8 @@
 import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { MatriculaController } from './../controller/MatriculaController';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { InstrutorController } from './../controller/InstrutorController';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { CursoController } from './../controller/CursoController';
@@ -16,12 +18,11 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
-    "InstrutorDto": {
+    "MatriculaDto": {
         "dataType": "refObject",
         "properties": {
-            "nome": {"dataType":"string","required":true},
-            "email": {"dataType":"string","required":true},
-            "especialidade": {"dataType":"string","required":true},
+            "alunoId": {"dataType":"double","required":true},
+            "cursoId": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
     },
@@ -31,6 +32,16 @@ const models: TsoaRoute.Models = {
         "properties": {
             "message": {"dataType":"string","required":true},
             "object": {"dataType":"any","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "InstrutorDto": {
+        "dataType": "refObject",
+        "properties": {
+            "nome": {"dataType":"string","required":true},
+            "email": {"dataType":"string","required":true},
+            "especialidade": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -90,6 +101,133 @@ export function RegisterRoutes(app: Router) {
 
 
     
+        const argsMatriculaController_cadastrarMatricula: Record<string, TsoaRoute.ParameterSchema> = {
+                dto: {"in":"body","name":"dto","required":true,"ref":"MatriculaDto"},
+                sucess: {"in":"res","name":"201","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.post('/matriculas',
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController)),
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController.prototype.cadastrarMatricula)),
+
+            async function MatriculaController_cadastrarMatricula(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsMatriculaController_cadastrarMatricula, request, response });
+
+                const controller = new MatriculaController();
+
+              await templateService.apiHandler({
+                methodName: 'cadastrarMatricula',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsMatriculaController_filtrarMatriculaID: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.get('/matriculas/:id',
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController)),
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController.prototype.filtrarMatriculaID)),
+
+            async function MatriculaController_filtrarMatriculaID(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsMatriculaController_filtrarMatriculaID, request, response });
+
+                const controller = new MatriculaController();
+
+              await templateService.apiHandler({
+                methodName: 'filtrarMatriculaID',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsMatriculaController_listarMatriculas: Record<string, TsoaRoute.ParameterSchema> = {
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.get('/matriculas',
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController)),
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController.prototype.listarMatriculas)),
+
+            async function MatriculaController_listarMatriculas(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsMatriculaController_listarMatriculas, request, response });
+
+                const controller = new MatriculaController();
+
+              await templateService.apiHandler({
+                methodName: 'listarMatriculas',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsMatriculaController_removerMatricula: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.delete('/matriculas/:id',
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController)),
+            ...(fetchMiddlewares<RequestHandler>(MatriculaController.prototype.removerMatricula)),
+
+            async function MatriculaController_removerMatricula(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsMatriculaController_removerMatricula, request, response });
+
+                const controller = new MatriculaController();
+
+              await templateService.apiHandler({
+                methodName: 'removerMatricula',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsInstrutorController_cadastrarInstrutor: Record<string, TsoaRoute.ParameterSchema> = {
                 dto: {"in":"body","name":"dto","required":true,"ref":"InstrutorDto"},
                 sucess: {"in":"res","name":"201","required":true,"ref":"BasicResponseDto"},
